[PatchRelease] Prepare for patch release July (#41311)
* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-developer-loadtesting to the release version 1.0.14.

* Prepare azure-developer-loadtesting for 1.0.15 patch release.

* Reset sources for azure-communication-phonenumbers to the release version 1.1.14.

* Prepare azure-communication-phonenumbers for 1.1.15 patch release.

* Reset sources for azure-iot-deviceupdate to the release version 1.0.19.

* Prepare azure-iot-deviceupdate for 1.0.20 patch release.

* Reset sources for azure-data-tables to the release version 12.4.2.

* Prepare azure-data-tables for 12.4.3 patch release.

* Reset sources for azure-communication-chat to the release version 1.5.2.

* Prepare azure-communication-chat for 1.5.3 patch release.

* Reset sources for azure-messaging-servicebus to the release version 7.17.1.

* Prepare azure-messaging-servicebus for 7.17.2 patch release.

* Reset sources for azure-developer-devcenter to the release version 1.0.1.

* Prepare azure-developer-devcenter for 1.0.2 patch release.

* Reset sources for azure-data-schemaregistry to the release version 1.4.7.

* Prepare azure-data-schemaregistry for 1.4.8 patch release.

* Reset sources for azure-messaging-webpubsub-client to the release version 1.0.4.

* Prepare azure-messaging-webpubsub-client for 1.0.5 patch release.

* Reset sources for azure-ai-metricsadvisor to the release version 1.1.26.

* Prepare azure-ai-metricsadvisor for 1.1.27 patch release.

* Reset sources for azure-security-keyvault-secrets to the release version 4.8.4.

* Prepare azure-security-keyvault-secrets for 4.8.5 patch release.

* Reset sources for azure-messaging-webpubsub to the release version 1.2.16.

* Prepare azure-messaging-webpubsub for 1.2.17 patch release.

* Reset sources for azure-identity-extensions to the release version 1.1.17.

* Prepare azure-identity-extensions for 1.1.18 patch rel