@@ -12,7 +12,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-communication-email</artifactId>
-  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure:azure-communication-email;current} -->
+  <version>1.0.15</version> <!-- {x-version-update;com.azure:azure-communication-email;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure Communications SDK for Email</name>
@@ -46,9 +46,6 @@
     <jacoco.min.linecoverage>0.70</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.45</jacoco.min.branchcoverage>
     <jacoco.skip>true</jacoco.skip>
-    <javaModulesSurefireArgLine>
-      --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
@@ -99,12 +96,6 @@
       <version>1.12.1</version> <!-- {x-version-update;com.azure:azure-core-http-okhttp;dependency} -->
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.azure</groupId>
-      <artifactId>azure-core-http-vertx</artifactId>
-      <version>1.0.0-beta.19</version> <!-- {x-version-update;com.azure:azure-core-http-vertx;dependency} -->
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -116,10 +107,10 @@
         <configuration>
           <codesnippetGlob>**/src/samples/java/**/*.java</codesnippetGlob>
           <codesnippetRootDirectory>${project.basedir}/src/samples/java</codesnippetRootDirectory>
-          <readmePath>${project.basedir}/README.md</readmePath>
           <sourceGlob>**/src/main/java/**/*.java</sourceGlob>
           <sourceRootDirectory>${project.basedir}/src/main/java</sourceRootDirectory>
           <includeSource>true</includeSource>
+          <readmePath>${project.basedir}/README.md</readmePath>
           <includeReadme>true</includeReadme>
           <maxLineLength>120</maxLineLength>
           <skip>false</skip>
@@ -143,21 +134,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>java12plus</id>
-      <activation>
-        <jdk>[12,)</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.azure</groupId>
-          <artifactId>azure-core-http-jdk-httpclient</artifactId>
-          <version>1.0.0-beta.14</version> <!-- {x-version-update;com.azure:azure-core-http-jdk-httpclient;dependency} -->
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 </project>
